# event-microservice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
core/: Cargo.toml
core/src/model/event/: entry.rs  insert.rs  mod.rs  utils.rs
infrastructure/: Cargo.toml
migrations/: 20250910073347_user.down.sql  20250910073347_user.up.sql  20250911072139_event.down.sql  20250911072139_event.up.sql  20250911072720_favorite.up.sql
presentation/: Cargo.toml
presentation/src/: main.rs
src/: error.rs  main.rs
src/core/: Cargo.toml
src/core/src/: error.rs
src/core/src/models/: event.rs  favorite.rs  mod.rs  token.rs  user.rs  utils.rs
src/db/: error.rs  event.rs  favorite.rs  mod.rs  user.rs  utils.rs
src/di/: Cargo.toml
src/di/src/: container.rs
src/domain/: error.rs  mod.rs  utils.rs
src/domain/event/: error.rs  model.rs  repository.rs
src/domain/favorite/: error.rs  mod.rs  model.rs  repository.rs
src/domain/user/: error.rs  mod.rs  model.rs  repository.rs
src/handles/: auth.rs  error.rs  event.rs  favorite.rs  mod.rs  user.rs
src/infrastructure/: Cargo.toml  mod.rs  provider.rs
src/infrastructure/db/: error.rs  event.rs  favorite.rs  mod.rs  user.rs
src/infrastructure/migrations/: 20250910073347_user.up.sql  20250911072139_event.up.sql  20250911072720_favorite.down.sql  20250911072720_favorite.up.sql  20250911072720_refresh.down.sql  20250911072721_refresh.up.sql  20250916065824_timestamp_update.down.sql  20250916065824_timestamp_update.up.sql
src/infrastructure/src/: lib.rs
src/infrastructure/src/db/: error.rs  mod.rs  provider.rs
src/infrastructure/src/db/event/: entity.rs  postgresql.rs  repository.rs
src/infrastructure/src/db/favorite/: entity.rs  mod.rs  postgresql.rs  repository.rs
src/infrastructure/src/db/refresh/: entity.rs  mod.rs  postgresql.rs  repository.rs
src/infrastructure/src/db/user/: entity.rs  postgresql.rs  repository.rs
src/presentation/: Cargo.toml
src/presentation/src/: main.rs
src/presentation/src/api/: authentication.rs  error.rs  mod.rs  utils.rs
src/presentation/src/api/event/: dto.rs  handles.rs  types.rs
src/presentation/src/api/favorite/: dto.rs  handles.rs  types.rs
src/presentation/src/api/refresh/: dto.rs  handles.rs  types.rs
src/presentation/src/api/user/: dto.rs  handles.rs  mod.rs  types.rs
src/presentation/src/handles/: event.rs  favorite.rs  user.rs
src/use_case/: Cargo.toml
src/use_case/src/: error.rs  lib.rs
src/use_case/src/services/: event.rs  favorite.rs  mod.rs  refresh.rs  user.rs
