[workspace]
resolver = "3"
package.version = "0.2.0"
package.edition = "2024"

members = [
        "src/core",
        "src/infrastructure",
        "src/use_case",
        "src/presentation",
        "src/di"
]

[workspace.dependencies]
domain = { path = "src/core" }
infrastructure = { path = "src/infrastructure" }
use_case = { path = "src/use_case" }
presentation = { path = "src/presentation" }
di = { path = "src/di" }

actix-web = { version = "4.11.0", default-features = false }
actix-web-httpauth = { version = "0.8.2", default-features = false }
utoipa = { version = "5.4.0", default-features = false }
utoipa-actix-web = { version = "0.1.2", default-features = false }
utoipa-swagger-ui = { version = "9.0.2", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
simple_logger = { version = "5.0.0", default-features = false }
log = { version = "0.4.28", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
sqlx = { version = "0.8.6", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_with = { version = "3.15.0", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
serde-aux = { version = "4.7.0", default-features = false }
jsonwebtoken = { version = "10.0.0", default-features = false }
time = { version = "0.3.44", default-features = false }
argon2 = { version = "0.5.3", default-features = false }
async-trait = { version = "0.1.89", default-features = false }
actix-web-grants = { version = "4.1.2", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

multiple-crate-versions = "allow"